--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/validator": "^13.15.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "validator": "^13.15.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
