--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@prisma/client": "^6.7.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/validator": "^13.15.0",
     "next": "14.1.0",
+    "prisma": "^6.7.0",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.15.0",
